force-app/main/default/objects/OmsLog__c/OmsLog__c.object-meta.xml
<CustomObject>
    <description>Custom log for Salesforce Order Management project.</description>
    <label>Oms Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oms Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>