force-app/main/default/objects/OmsLog__c/fields/AttachedToId__c.field-meta.xml
<CustomField>
    <fullName>AttachedToId__c</fullName>
    <description>Id of the related/attached.</description>
    <inlineHelpText>Id of the related/attached.</inlineHelpText>
    <label>Attached To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>