force-app/main/default/objects/OmsLog__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the log.</description>
    <inlineHelpText>Category of the log.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>