force-app/main/default/objects/OmsLog__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked/true triggers sending log email flow.</description>
    <inlineHelpText>If checked/true triggers sending log email flow.</inlineHelpText>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>